--- a/.github/workflows/docker-image-alpha.yml
+++ b/.github/workflows/docker-image-alpha.yml
@@ -11,19 +11,9 @@ on:
         required: false
 
 jobs:
-  build_single_arch:
-    name: Build & push (${{ matrix.arch }}) [native]
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - arch: amd64
-            platform: linux/amd64
-            runner: ubuntu-latest
-          - arch: arm64
-            platform: linux/arm64
-            runner: ubuntu-24.04-arm
-    runs-on: ${{ matrix.runner }}
+  build_and_push:
+    name: Build & push (amd64 only)
+    runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
@@ -40,7 +30,7 @@ jobs:
           echo "$VERSION" > VERSION
           echo "value=$VERSION" >> $GITHUB_OUTPUT
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "Publishing version: $VERSION for ${{ matrix.arch }}"
+          echo "Publishing version: $VERSION for amd64"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -58,57 +48,17 @@ jobs:
           images: |
             aureon1618/new-api
 
-      - name: Build & push single-arch (to Docker Hub)
+      - name: Build & push (amd64 only)
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64
           push: true
           tags: |
-            aureon1618/new-api:alpha-${{ matrix.arch }}
-            aureon1618/new-api:${{ steps.version.outputs.value }}-${{ matrix.arch }}
+            aureon1618/new-api:alpha
+            aureon1618/new-api:${{ steps.version.outputs.value }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false
           sbom: false
-
-  create_manifests:
-    name: Create multi-arch manifests (Docker Hub)
-    needs: [build_single_arch]
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - name: Check out (shallow)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Determine alpha version
-        id: version
-        run: |
-          VERSION="alpha-$(date +'%Y%m%d')-$(git rev-parse --short HEAD)"
-          echo "value=$VERSION" >> $GITHUB_OUTPUT
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Create & push manifest (Docker Hub - alpha)
-        run: |
-          docker buildx imagetools create \
-            -t aureon1618/new-api:alpha \
-            aureon1618/new-api:alpha-amd64 \
-            aureon1618/new-api:alpha-arm64
-
-      - name: Create & push manifest (Docker Hub - versioned alpha)
-        run: |
-          docker buildx imagetools create \
-            -t aureon1618/new-api:${VERSION} \
-            aureon1618/new-api:${VERSION}-amd64 \
-            aureon1618/new-api:${VERSION}-arm64
