--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           bun-version: latest
       - name: Build Frontend
         env:
-          CI: ""
+          CI: ''
         run: |
           cd web
           bun install
@@ -37,17 +37,11 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '>=1.25.1'
-      - name: Build Backend (amd64)
+      - name: Build Backend
         run: |
           go mod download
           VERSION=$(git describe --tags)
           go build -ldflags "-s -w -X 'new-api/common.Version=$VERSION' -extldflags '-static'" -o new-api-$VERSION
-      - name: Build Backend (arm64)
-        run: |
-          sudo apt-get update
-          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y gcc-aarch64-linux-gnu
-          VERSION=$(git describe --tags)
-          CC=aarch64-linux-gnu-gcc CGO_ENABLED=1 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -X 'new-api/common.Version=$VERSION' -extldflags '-static'" -o new-api-arm64-$VERSION
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
@@ -70,8 +64,8 @@ jobs:
           bun-version: latest
       - name: Build Frontend
         env:
-          CI: ""
-          NODE_OPTIONS: "--max-old-space-size=4096"
+          CI: ''
+          NODE_OPTIONS: '--max-old-space-size=4096'
         run: |
           cd web
           bun install
@@ -110,7 +104,7 @@ jobs:
           bun-version: latest
       - name: Build Frontend
         env:
-          CI: ""
+          CI: ''
         run: |
           cd web
           bun install
@@ -132,5 +126,3 @@ jobs:
           files: new-api-*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
