feat(checkin): 紧凑化每日签到日历网格，限制最大宽度并下调单元格与间距（--calendar-cell-size 6446，gap 83），优化桌面显示占用

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # 前端基础URL
 # FRONTEND_BASE_URL=https://your-frontend-url.com
 
+# 安全设置
+# 是否要求 API Token 请求包含 New-Api-User 头部验证 (推荐保持 true)
+# Session 认证(如OAuth登录)不受此限制，仅影响 API Token 认证
+# Whether to require New-Api-User header validation for API token requests
+# REQUIRE_USER_HEADER=false
 
 # 调试相关配置
 # 启用pprof
